# jupyter-kernel-client

./: .gitignore  CHANGELOG.md  Makefile  README.md  RELEASE.md  conftest.py  pyproject.toml
.github/workflows/: build.yml  fix-license-header.yml  tests.yml
dev/: test.ipynb
jupyter_kernel_client/: __init__.py  __version__.py  _version.py  client.py  consoleapp.py  constants.py  konsoleapp.py  log.py  manager.py  models.py  shell.py  snippets.py  utils.py  wsclient.py
jupyter_kernel_client/tests/: __init__.py  conftest.py  test_client.py  test_sdk.py
