# Copyright (c) 2023-2024 Datalayer, Inc.
#
# BSD 3-Clause License

[build-system]
requires = ["hatchling~=1.21"]
build-backend = "hatchling.build"

[project]
name = "jupyter_kernel_client"
authors = [
  { name = "Datalayer", email = "info@datalayer.io" }
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Jupyter"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Framework :: Jupyter",
]
dependencies = [
  "jupyter_core",
  "jupyter_client>=8.6.3",
  "jupyter-mimetypes",
  "requests",
  "traitlets>=5.3",
  "typing-extensions",
  "websocket-client",
]

[project.optional-dependencies]
konsole = [
  "jupyter_console",
]
test = [
  "ipykernel",
  "jupyter_server>=2.10,<3",
  "numpy",
  "pandas",
  "pytest>=7.0",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-timeout",
]
lint = [
  "pre_commit",
  "mdformat>0.7",
  "mdformat-gfm>=0.3.5",
  "ruff"
]
typing = [
  "mypy>=0.990"
]

[project.scripts]
jupyter-konsole = "jupyter_kernel_client.konsoleapp:main"

[project.license]
file = "LICENSE"

[project.urls]
Home = "https://github.com/datalayer/jupyter-kernel-client"

[tool.hatch.version]
path = "jupyter_kernel_client/_version.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
  "error",
  "ignore:There is no current event loop:DeprecationWarning",
  "module:make_current is deprecated:DeprecationWarning",
  "module:clear_current is deprecated:DeprecationWarning",
  "module:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning",
]
timeout=30

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
pretty = true
show_error_context = true
show_error_codes = true
strict_equality = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = ["tests"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C",
  "E",
  "F",
  "FBT",
  "I",
  "N",
  "Q",
  "RUF",
  "S",
  "T",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # FBT001 Boolean positional arg in function definition
  "FBT001",
  "FBT002",
  "FBT003",
]

[tool.ruff.lint.per-file-ignores]
# S101 Use of `assert` detected
"jupyter_kernel_client/tests/*" = ["S101"]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[dependency-groups]
dev = [
    {include-group = "test"}
]
test = [
    "ipykernel>=6.31.0",
    "jupyter-server>=2.17.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
]
